# jp2a

./: ChangeLog  Dockerfile  Doxyfile.in  Makefile.am  README  configure.ac
.github/workflows/: full-check.yml  publish-docker-image.yml
completion/bash/: jp2a
completion/zsh/: _jp2a
doc/: image pipeline.md
include/: aspect_ratio.h  image.h  options.h
man/: jp2a.1
src/: aspect_ratio.c  html.c  image.c  jp2a.c  options.c
tests/: dalsnuten-color-256.txt  dalsnuten-color-ANSI.txt  dalsnuten-color-truecolor.txt  edges-only-invert.txt  edges-only.txt  edges.txt  grind-256-fill.txt  grind-2grayscale-256-fill.txt  grind-2grayscale-ANSI-fill.txt  grind-2grayscale-truecolor-fill.txt  grind-ANSI-fill.txt  grind-color-256.txt  grind-color-ANSI.txt  grind-color-truecolor.txt  grind-truecolor-fill.txt  jp2a-colorful-horizontal-270.txt  jp2a-horizontal-270.txt  jp2a-mirror-horizontal.txt  jp2a-mirror-vertical.txt  jp2a-png-interlaced-16-bit.txt  jp2a-png-invert.txt  jp2a-rotate-270.txt  jp2a-rotate-90-flipy.txt  jp2a-rotate-90.txt  jp2a-webp-scale-up.txt  jp2a-webp.txt  normal-verbose.txt  run-tests.sh
